clean a bit css, new css for buttons, fixes bugs with jumping buttons, new hover css

--- a/media/pinax/css/base.css
+++ b/media/pinax/css/base.css
@@ -1,8 +1,6 @@
 body {
     background-color: #1d3853;
     margin: 0;
-}
-body {
     color: #333;
     font-family: 'PT Sans', Helvetica, Arial, sans-serif;
     font-size: 10pt;
@@ -63,10 +61,6 @@ td {
 }*/
 form th {
     text-align : left;
-}
-form.signup input[type="submit"], form.login input[type="submit"] {
-    margin: 20px 0;
-    font-size: 14pt;
 }
 input[type="text"], input[type="password"], textarea {
     padding: 3px;
@@ -384,49 +378,6 @@ dl.what_next dd {
 }
 p.what_next {
     font-size: 120%;
-}
-
-/* FORMS **********************************/
-
-/* ----------- basic-sm ----------- */
-
-#basic-form .underlineme {
-    border-bottom: 4px solid #DEDEDE;
-    margin-top: 15px;
-}
-#basic-form hr {
-    border-top:solid 4px #DEDEDE;
-}
-#basic-form p{
-    color:#666666;
-    border-bottom:solid 1px #dedede;
-    padding-bottom: 5px;
-}
-#basic-form label{
-    display:block;
-    font-weight:bold;
-}
-#basic-form td {
-    padding: 2px;
-}
-#basic-form td.rightd {
-    padding-right: 70px;
-}
-#basic-form span{
-    color: #aaa;
-    font-style: italic;
-    width:300px;
-}
-#basic-form input, #basic-form select{
-    float:left;
-    margin:2px 0 2px 10px;
-    font-size: 11px;
-}
-
-#basic-form textarea{
-    float:left;
-    margin:2px 0 2px 10px;
-    font-size: 11px;
 }
 
 /* Fieldsets */
