--- a/media/turan/base.css
+++ b/media/turan/base.css
@@ -87,10 +87,8 @@ table.fullsize .number {
 
 /* Forms */
 form input[type=submit]:active {
-	margin: 2px -2px -2px 2px;
-}
-form input[type=submit]:hover {
-	background: #f88;
+    margin-top: 3px; /* Regular button have 5 top margin */
+    margin-bottom: 2px;
 }
 form input, form textarea {
 	border: 1px solid #bbb;
@@ -668,7 +666,7 @@ div.mapcontainer {
     bottom: -2px;
     right: 0px;
 }
-#tabs>ul>li:hover {
+#tabs>ul>li:hover, button:hover, form input[type=submit]:hover {
     color:#fff; 
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#cccccc', endColorstr='#777777'); /* for IE */
     background: -webkit-gradient(linear, left top, left bottom, from(#ccc), to(#777)); /* for webkit browsers */
@@ -1269,4 +1267,20 @@ p.description {
     right: 0;
     bottom: 0;
     margin: 0;
+}
+button, input[type="button"], input[type="submit"] {
+    border-radius: 3px;
+    -webkit-box-shadow: 0px 3px 9px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0px 3px 9px rgba(0, 0, 0, 0.1);
+    -o-box-shadow: 0px 3px 9px rgba(0, 0, 0, 0.1);
+    background: -webkit-linear-gradient(#FAFAFA, #F4F4F4 40%, #E5E5E5);
+    background: -moz-linear-gradient(top,  #FAFAFA,  #F4F4F4);
+    background: -o-linear-gradient(top,  #FAFAFA,  #F4F4F4); 
+    border: 1px solid #AAA;
+    color: #444;
+    font-size: inherit;
+    margin-bottom: 0px;
+    margin-top: 5px;
+    min-width: 4em;
+    padding: 6px 24px 6px 24px;
 }
